Background color change

--- a/to-do-list.css
+++ b/to-do-list.css
@@ -4,7 +4,7 @@ body {
 }
 
 .my-list {
-    background-color: #f7f381;
+    background-color: #72d615;
     padding: 8px 24px;
     width: 500px;
     margin: 0 auto;
