Editing the box-shadow color

--- a/to-do-list.css
+++ b/to-do-list.css
@@ -9,7 +9,7 @@ body {
     width: 500px;
     margin: 0 auto;
     border: 1px solid #f7f381;
-    box-shadow: 0 0 10px 2px #333333;
+    box-shadow: 0 0 10px 2px #04e2ff;
 }
 
 .my-list h1 {
