--- a/to-do-list.css
+++ b/to-do-list.css
@@ -21,7 +21,7 @@ body {
     font-size: 20px;
     margin-top: 0;
     margin-bottom: 12px;
-    text-align: center;
+    text-align: right;
 }
 
 .my-list ol {
